Playback radio buttons now affect chord playback on click. Horizontal scrolling with shift mousewheel added. Playback now extends across grid frames. Fixed bug with note deletion. Border color changes with edit mode setting.

--- a/browserUI/sequencer/css/example.css
+++ b/browserUI/sequencer/css/example.css
@@ -8,7 +8,6 @@ canvas {
 
 #gridboxContainer
 {
-	border:solid red 1px;
 	overflow-x:scroll;
     overflow-y:scroll;
 	width:100%;
